k8s/tech-manager-ticket/tech-manager-ticket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tech-manager-ticket-deployment
  labels:
    app: tech-manager-ticket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tech-manager-ticket
  template:
    metadata:
      labels:
        app: tech-manager-ticket
    spec:
      containers:
        - name: tech-manager-ticket
          image: thibaudf/tech-manager-ticket:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: tech-manager-ticket-service
spec:
  type: NodePort
  selector:
    app: tech-manager-ticket
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30001
