k8s/tech-manager-ticket/tech-manager-ticket-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tech-manager-ticket-ingress
spec:
  rules:
    - host: qa-skyrave.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tech-manager-ticket-service
                port:
                  number: 8000
